# geo4460

./: .gitignore  .pre-commit-config.yaml  README.md  list_gdb_contents.py  pyproject.toml  requirements.txt  segments.geojson  segments_map.html
lab/: template.ipynb
lab/GIS3/: Halvorsen_GEO4460_GIS3.ipynb  gis3_vector_analysis.ipynb
lab/GIS3/data/: cultivated_field_sediment_area.xlsx  groundwater_sediment_area.xlsx  sediment_area.xlsx
lab/GIS4/: Halvorsen_GEO4460_report4_interpolation.ipynb  plot.py  thaw_2007_mean_trend.tsv  utils.py
lab/GIS4/exports/: SNOW05.csv  THAW05.csv  THAW06.csv  THAW07.csv  THAW08.csv  THAW09.csv  sample_raster_snow_melt.csv
lab/GIS5/: GIS_DEM_analysis.md  Halvorsen_GEO4460_GIS5_DEM_generation.ipynb  Makefile  README.md  automate_dem_analysis.py  debug_grass_burn.py  list_gdb_contents.py
lab/GIS5/helper/: automate_dem_analysis.py  convert_gdb_to_gpkg.py  list_gdb_contents.py  prepare_raw_data.py
lab/GIS5/output_py/: profile_interpolated.html  profile_interpolated_contour.html  profile_interpolated_points.html  profile_stream_burned.html  profile_topo.html  profile_topo_contour.html  profile_topo_points.html  profile_toporaster_all.html  rmse_comparison.csv
lab/GIS5/output_rogaland/: profile_interpolated_contour.html  profile_interpolated_points.html  profile_stream_burned.html  rmse_comparison.csv  (+3 more)
lab/GIS8/: Halvorsen_GEO4460_GIS8.ipynb
mca/: GEO4460_Halvorsen_MCA.ipynb  Makefile  README.md  template.ipynb
mca/data/: segments_oslo.geojson
mca/docs/: project_description.ipynb  storymap.md
mca/helper/: dask_data_loader.py  display_raster.ipynb  display_vectors.ipynb
mca/img/: segment_popularity_multi_layer_map.html  workflow_diagram.drawio
mca/output/: elevation_rmse_results.csv  heatmap_rmse_results.csv
mca/src/: collect.py  collect_activities.py  collect_activity_details.py  config.py  strava.py  strava_authorize.py  strava_flask_app.py  utils.py  workflow.py
(+107 files in other folders)
