[project]
name = "gis3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polyline>=2.0.2",
    "shapely>=2.0.7",
    "tabulate>=0.9.0",
]
