[project]
name = "geo4460"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "folium>=0.19.5",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "ipython-genutils>=0.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nbconvert>=5.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polyline>=2.0.2",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "shapely>=2.0.7",
    "tabulate>=0.9.0",
    "whitebox>=2.3.6",
    "pydantic>=2.7.1",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "flake8>=7.2.0",
    "grass-session>=0.5",
    "grass>=0.1.2",
    "dask>=2025.3.0",
    "distributed>=2025.3.0",
    "geokrige>=0.0.1",
    "pandoc>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["lab", "mca", "slides", "downloads"]
